--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -7,9 +7,10 @@
             <th>Nr tel.</th>
             <th>Opis</th>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
+        
+        <tr *ngFor="let client of clients">
+            <td>{{client.cl_id}}</td>
+            <td>{{client.cl_name}}</td>
             <td></td>
             <td></td>
             <td></td>
