--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,5 +1,8 @@
 <div class="container">
     <div class="row">
+        <div class="col-md-1">
+            <label >Podaj id</label> 
+        </div>
         <div class="col-md-2">
             <label >Podaj imię</label> 
         </div>
@@ -8,6 +11,9 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-md-1">
+            <input type="number" class="form-control" id="name-input" #clIdInput >
+        </div>
         <div class="col-md-2">
             <input type="text" class="form-control" id="name-input" #clNameInput >
         </div>
@@ -41,7 +47,7 @@
             <button class="btn btn-primary">Edytuj</button>
         </div>
         <div class="col-md-1">
-            <button class="btn btn-danger">Usuń</button>
+            <button class="btn btn-danger" (click)="DeleteClient()">Usuń </button>
         </div>
     </div>
 </div>
