add few components, models and services

--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -15,7 +15,8 @@
             <td>{{client.cl_surname}}</td>
             <td>{{client.cl_phone}}</td>
             <td>{{client.cl_desc}}</td>
-            <td></td>
+            <td> <input type="checkbox" id="clId" name="vehicle1" value="{{client.cl_id}}">
+                <label for="vehicle1"> Zaznacz</label></td>
         </tr>
     </table>
 </div>
