--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -12,7 +12,8 @@
     </div>
     <div class="row">
         <div class="col-md-1">
-            <input type="number" class="form-control" id="name-input" #clIdInput >
+            <input type="number" class="form-control" id="clId-input" [(ngModel)]="clId" [defaultValue]="0" >
+            
         </div>
         <div class="col-md-2">
             <input type="text" class="form-control" id="name-input" #clNameInput >
@@ -47,7 +48,7 @@
             <button class="btn btn-primary">Edytuj</button>
         </div>
         <div class="col-md-1">
-            <button class="btn btn-danger" (click)="DeleteClient()">Usuń </button>
+            <button class="btn btn-danger" [disabled]="clId < 1 " (click)="DeleteClient()">Usuń </button>
         </div>
     </div>
 </div>
