--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -7,7 +7,7 @@
             <th>Zatrudniony</th>
         </tr>
         
-        <tr *ngFor="let employee of employees">
+        <tr *ngFor="let employee of employeeList">
             <td>{{employee.emp_id}}</td>
             <td>{{employee.emp_name}}</td>
             <td>{{employee.jobPosition.position_title}}</td>
