--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,36 @@
-<p>employee works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-1">
+            <label >Id</label> 
+        </div>
+        <div class="col-md-2">
+            <label >Dane pracownika</label> 
+        </div>
+        <div class="col-md-2">
+            <label >Stanowisko</label> 
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-1">
+            <input type="number" class="form-control" id="clId-input"  [defaultValue]="0" > 
+        </div>
+        <div class="col-md-2">
+            <input type="text" class="form-control" id="name-input" #empNameInput >
+        </div>
+        <div class="col-md-2">
+            <input type="text" class="form-control" id="sname-input" #empPositionInput>
+        </div>
+    </div>
+    <br>
+   
+    <hr>
+    <div class="row">
+        <div class="col-md-1">
+          <button class="btn btn-success" type="submit"(click)="NewEmployee()">Dodaj</button>
+        </div>
+    </div>
+</div>
+<hr>
+<app-employee-list></app-employee-list>
+
+
