--- a/src/app/Header/header.compomnent.html
+++ b/src/app/Header/header.compomnent.html
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a href="#" class="navbar-brand">Recipe Book</a>
+        <a routerLink="/" class="navbar-brand">Recipe Book</a>
       </div>
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#" (click)="onSelect('client')">Klienci</a></li>
-          <li><a href="#" (click)="onSelect('employee')">Pracownicy</a></li>
-          <li><a href="#" (click)="onSelect('services')">Usługi</a></li>
-          <li><a href="#" (click)="onSelect('reservation')">Reserwacje</a></li>
+          <li><a routerLink="/client" (click)="onSelect('client')" class="btn btn-primary">Klienci</a></li>
+          <li><a [routerLink]="['/employee']" (click)="onSelect('employee')" class="btn btn-dark">Pracownicy</a></li>
+          <li><a routerLink="/services" (click)="onSelect('services')"class="btn btn-primary">Usługi</a></li>
+          <li><a routerLink="/reservation" (click)="onSelect('reservation')" class="btn btn-dark">Reserwacje</a></li>
         </ul>
       </div>
     </div>
+
   </nav>
