job-position component change

--- a/src/app/Header/header.compomnent.html
+++ b/src/app/Header/header.compomnent.html
@@ -28,6 +28,11 @@
              (click)="onSelect('reservation')"
               class="btn btn-dark">Reserwacje</a>
           </li>
+          <li>
+            <a routerLink="/JobPosition"
+             (click)="onSelect('jobPosition')"
+              class="btn btn-dark">Stanowisko</a>
+          </li>
         </ul>
       </div>
     </div>
