--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-employee *ngIf="loadedFeatures === 'employee'" ></app-employee>
 <app-reservation *ngIf="loadedFeatures === 'reservation'"></app-reservation>
 <app-services *ngIf="loadedFeatures === 'services'"></app-services>
+<app-job-position *ngIf="loadedFeatures === 'jobPosition'"></app-job-position>
 
