--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-header (featureSelected)="onNavigate($event)"></app-header>
 
-<app-client *ngIf="loadedFeatures === 'client'">  </app-client>
-<app-employee *ngIf="loadedFeatures === 'employee'" ></app-employee>
-<app-reservation *ngIf="loadedFeatures === 'reservation'"></app-reservation>
-<app-services *ngIf="loadedFeatures === 'services'"></app-services>
-<app-job-position *ngIf="loadedFeatures === 'jobPosition'"></app-job-position>
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-10">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
