--- a/src/app/Header/header.compomnent.html
+++ b/src/app/Header/header.compomnent.html
@@ -6,7 +6,8 @@
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li>
+          <li routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">
             <a routerLink="/client" 
             (click)="onSelect('client')"
              class="btn btn-primary"> Klienci</a>
@@ -16,9 +17,7 @@
              (click)="onSelect('employee')"
               class="btn btn-dark">Pracownicy</a>
           </li>
-          <li routerLinkActive="active"
-            [routerLinkActiveOptions]="{exact: true}"
-          >
+          <li>
             <a routerLink="/services" 
             (click)="onSelect('services')"
             class="btn btn-primary">Usługi</a>
