--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -3,10 +3,10 @@
         <div class="col-md-1">
             <label >Id</label> 
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
             <label >Dane pracownika</label> 
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
             <label >Stanowisko</label> 
         </div>
     </div>
@@ -14,20 +14,15 @@
         <div class="col-md-1">
             <input type="number" class="form-control" id="clId-input"  [defaultValue]="0" > 
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
             <input type="text" class="form-control" id="name-input" #empNameInput >
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
             <div class="dropdown">
-               <!-- <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                    Dropdown button
-                  </button>
-                <ul class="dropdown-menu" *ngFor="let job of jobPositionList">
-                    <li><a class="dropdown-item" href="#" >{{job.position_title}}}</a></li>
-                </ul>-->
-                <ul class="list-group" *ngFor="let job of jobPositionList">
-                    <li class="list-group-item">{{job.position_title}}</li>
-                </ul>
+                <select class="form-select"  [ngModel]="jobPosition_id" (ngModelChange)="SelectedItem($event)">
+                    <option value="0">Wybierz</option>
+                    <option *ngFor="let job of jobPositionList" [ngValue]="job.position_id">{{job.position_title}}</option>
+                </select>
             </div>
            <!--<input type="text" class="form-control" id="sname-input" #empPositionInput>--> 
            
