--- a/src/app/employee/employee_edit/edit/edit.component.html
+++ b/src/app/employee/employee_edit/edit/edit.component.html
@@ -11,6 +11,6 @@
         <p > {{employee.emp_name}}</p>
       </div>
     <div class="col-md-8">
-        <input type="text" class="form-control" id="name-input" #empNameInput>
+        <input type="text" class="form-control" id="name-input" value="{{employee.emp_name}}" #empNameInput>
     </div>
 </div>
