--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <div class="col-md-1">
-            <input type="number" class="form-control" id="clId-input" [(ngModel)]="clId" [defaultValue]="0" >
+            <input type="number" class="form-control" id="clId-input" [(ngModel)]="clId" [defaultValue]="0" #clIdInput >
             
         </div>
         <div class="col-md-2">
@@ -48,11 +48,17 @@
           <button class="btn btn-success" type="submit"(click)="NewClient()">Dodaj</button>
         </div>
         <div class="col-md-1">
-            <button class="btn btn-primary">Edytuj</button>
+            <button class="btn btn-primary" type="submit" (click)="OnEditClient()" >Edytuj</button>
         </div>
         <div class="col-md-1">
             <button class="btn btn-danger" [disabled]="clId < 1 " (click)="DeleteClient()">Usuń </button>
         </div>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <router-outlet></router-outlet>
     </div>
 </div>
 <hr>
