--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -14,8 +14,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <button class="btn btn-success" type="submit" (click)="OnEditionEmployee()" >Edytuj</button> 
+                    </div>
+                    <div class="col-md-1">
                         <input type="number" class="form-control" id="clId-input"  #empIdInput > 
                     </div>
                     <div class="col-md-3">
